--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/NovasParcelas.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/NovasParcelas.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Title="NovasParcelas" 
-        Height="200" Width="300" 
+        Height="250" Width="300" 
         WindowStartupLocation="CenterScreen"
         WindowStyle="None" Loaded="Window_Loaded">
     <Grid >
@@ -17,10 +17,18 @@
                 <RowDefinition Height="150"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="0" Background="#FF1F3D68"/>
+            <Grid Grid.Row="0" Background="#FF1F3D68">
+                <TextBlock x:Name="txtTituloTela"
+                            FontFamily="Champagne &amp; Limousines" 
+                            FontSize="18"
+                            Foreground="White"
+                           HorizontalAlignment="Center"
+                           Margin="0 10 0 0"
+                           Text="Novas Parcelas"/>
+            </Grid>
             <Grid Grid.Row="1" Background="LightSlateGray"/>
         </Grid>
-        <Border Margin="10"  
+        <Border Margin="10 40 10 10"  
                     Background="LightGray" 
                     Opacity="0.9"
                     CornerRadius="30"
@@ -45,7 +53,7 @@
                     <TextBox
                         x:Name="txtValorTotal"
                         Grid.Column="0"
-                        materialDesign:HintAssist.Hint="Valor" 
+                        materialDesign:HintAssist.Hint="Valor"
                         Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                         FontFamily="Champagne &amp; Limousines" 
                         FontSize="20"
